# python-project-83

./: README.md  database.sql  makefile  pyproject.toml  runtime.txt
.github/workflows/: hexlet-check.yml  tests_and_linter.yaml
page_analyzer/: app.py  forms.py  models.py
page_analyzer/handlers/: add_check.py  index.py  url_detail.py  urls.py
page_analyzer/templates/: index.html  macros.html  url.html  urls.html
tests/: tests.py
