[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Emil Murzin <emil.morua@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
pytest = "^7.3.2"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
psycopg = "^3.1.9"
flask-sqlalchemy = "^3.0.5"
validators = "^0.20.0"
werkzeug = "^2.3.6"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
