[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Emil Murzin <emil.morua@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
python-dotenv = "^1.0.0"

gunicorn = "^20.1.0"
flask-sqlalchemy = "^3.0.5"
validators = "^0.20.0"
werkzeug = "^2.3.6"

flask-wtf = "^1.1.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
datetime = "^5.1"
psycopg2-binary = "^2.9.6"
sqlite-utils = "^3.33"
sqlalchemy = "^2.0.19"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"
pytest-flask = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
